--- a/index.html
+++ b/index.html
@@ -5,20 +5,13 @@
 <title>Torpedo video sinker</title>
 <script src="torpedo.js" type="text/javascript"></script>
 </head>
-<body onload="load_torpedo ('vid1', 'vid2')">
+<body onload="torpedo_load ('vid1')">
 <div>
-<video id="vid1" src="test-video.webm" controls="controls"></video>
-<div>
-<button onclick="play1 ()">Ready Player One</button>
-<button onclick="pause1 ()">Not Ready</button>
-</div>
-</div>
-<div>
-<video id="vid2" src="test-video.webm" controls="controls" muted="true"></video>
-<div>
-<button onclick="play2 ()">Ready Player Two</button>
-<button onclick="pause2 ()">Not Ready</button>
-</div>
+	<video id="vid1" src="test-video.webm" muted="true"></video>
+	<div>
+		<button onclick="trpd.ready ()">Ready Player One</button>
+		<button onclick="trpd.unready ()">Not Ready</button>
+	</div>
 </div>
 </body>
 </html>
