Fixing for deployment

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	// Let's subscribe to animal related events.
 	var category = "torpedo";
 	
-	let server = "http://localhost:8081/torpedo";
+	let server = "http://localhost:8081/torpedo/stuff";
 	
 	let vid = document.getElementById ("trpd_vid");
 	
