Adding ready / unready system. This replaces the shared pause / resume

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
 <meta charset=UTF-8>
 <meta name=viewport content="width=device-width, initial-scale=1">
-<title>Smash Bros Melee Opening</title>
+<title>Torpedo Video Sinker</title>
 </head>
 <body>
 	<div>
-		<video id="trpd_vid" src="test-video.webm" muted="true"></video>
+		<video id="trpd_vid" src="test-video.mp4" muted="true" style="max-width:100%"></video>
 		<div>
 			<!-- Play -->
-			<button onclick="ready (true)">&#9654;</button>
+			<button onclick="ready (true)">&#9654; Ready</button>
 			<!-- Pause -->
 			<button onclick="ready (false)">&#9646;&#9646;</button>
+			<span style="color:#a0b7e0" id="debug-text">[----]</span>
 		</div>
 	</div>
 	<p style="color:#a0b7e0">Torpedo Video Sinker</p>
